--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "template",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "devDependencies": {
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-consolidate": "^0.2.0",
-    "gulp-iconfont": "^10.0.1",
-    "gulp-livereload": "^3.8.1",
+    "gulp-iconfont": "^10.0.3",
+    "gulp-livereload": "^4.0.2",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
